--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
   </head>
+
+  
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -22,14 +24,16 @@
           </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -37,32 +41,32 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <h2>Lorem ipsum dolor sit.</h2>
+
       <section>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -74,13 +78,13 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/computer.jpg" alt="computer" width="360"/>
+            <img src="./images/computer.jpg" alt="computer" width="360" />
           </li>
           <li>
-            <img src="./images/smartphone.jpg" alt="smartphone" width="360"/>
+            <img src="./images/smartphone.jpg" alt="smartphone" width="360" />
           </li>
           <li>
-            <img src="./images/notebook.jpg" alt="notebook" width="360"/>
+            <img src="./images/notebook.jpg" alt="notebook" width="360" />
           </li>
         </ul>
       </section>
@@ -88,22 +92,33 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/markguerrero.jpg" alt="markguerrero" width="264"/>
+            <img
+              src="./images/markguerrero.jpg"
+              alt="markguerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tomford.jpg" alt="tomford" width="264"/>
+            <img src="./images/tomford.jpg" alt="tomford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camilagarcia.jpg" alt="camilagarcia" width="264"/>
+            <img
+              src="./images/camilagarcia.jpg"
+              alt="camilagarcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/danielwilson.jpg" alt="danielwilson" width="264"/>
+            <img
+              src="./images/danielwilson.jpg"
+              alt="danielwilson"
+              width="264"/>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -113,7 +128,7 @@
 
     <footer>
       <section>
-        <h2>WebStudio</h2>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
