--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Studio</title>
   </head>
 
-  
+
   <body>
     <header>
       <nav>
@@ -30,7 +30,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -43,6 +43,8 @@
       </section>
 
       <section>
+        <h2>Lorem, ipsum dolor.
+        </h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -127,13 +129,13 @@
     </main>
 
     <footer>
-      <section>
+    
         <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </section>
+      
     </footer>
   </body>
 </html>
